// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Placeholder danger renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-danger"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder dark renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-dark"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder glow renders correctly 1`] = `
<jest>
  <p
    class="placeholder-glow"
  >
    <span
      class="placeholder text-bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder info renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-info"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder lg renders correctly 1`] = `
<jest>
  <span
    class="placeholder placeholder-lg text-bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder light renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-light"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder link renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-link"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder primary renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder secondary renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-secondary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder sm renders correctly 1`] = `
<jest>
  <span
    class="placeholder placeholder-sm text-bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder success renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-success"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder warning renders correctly 1`] = `
<jest>
  <span
    class="placeholder text-bg-warning"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder wave renders correctly 1`] = `
<jest>
  <p
    class="placeholder-wave"
  >
    <span
      class="placeholder text-bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder xs renders correctly 1`] = `
<jest>
  <span
    class="placeholder placeholder-xs text-bg-primary"
    style="width: 70%;"
  />
</jest>
`;
